--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,28 +1,32 @@
 version: '3'
+
 services:
-  postgres:
-    image: 'postgres:latest'
-    environment:
-      - PGPASSWORD=postgres_password
-  redis:
-    image: 'redis:latest'
   nginx:
-    depends_on:
-      - api
-      - client
     restart: always
     build:
       dockerfile: Dockerfile.dev
       context: ./nginx
     ports:
       - '3050:80'
+    depends_on:
+      - api
+      - worker
+
+
+  postgres:
+    image: 'postgres:latest'
+
+  redis:
+    image: 'redis:latest'
+
   api:
     build:
       dockerfile: Dockerfile.dev
       context: ./server
+
     volumes:
-      - /app/node_modules
-      - ./server:/app
+      - /app/node_modules # will leave this untouched
+      - ./server:/app     # will keep changes between developer machine and container
     environment:
       - REDIS_HOST=redis
       - REDIS_PORT=6379
@@ -31,17 +35,24 @@ services:
       - PGDATABASE=postgres
       - PGPASSWORD=postgres_password
       - PGPORT=5432
+    depends_on:
+      - postgres
+
   client:
     build:
       dockerfile: Dockerfile.dev
       context: ./client
     volumes:
-      - /app/node_modules
+      - /app/node_modules # will leave this untouched
       - ./client:/app
+
   worker:
     build:
       dockerfile: Dockerfile.dev
-      context: ./client
+      context: ./worker
     volumes:
-      - /app/node_modules
+      - /app/node_modules # will leave this untouched
       - ./worker:/app
+    environment:
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
