--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ after_success:
   - docker build -t tfadams/fib-nginx ./nginx
   - docker build -t tfadams/fib-server ./server
   - docker build -t tfadams/fib-worker ./worker
-  # Login to Docker CLI
+  # Login to Docker Hello!
   - echo "$DOCKER_PASSWD" | docker login -u "$DOCKER_ID" --password-stdin
   # Take those images and push them to docker hub
   - docker push tfadams/fib-client
